Make pressing enter submit by clicking the first button in form even if there is only one textfield in form.  bug 147850, r=bzbarsky@mit.edu, sr=jst@netscape.com